<?xml version="1.0" encoding="utf-8"?>
<com.cmpe277.android.tweeter.views.TweetPopupOverlay
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_frame" >
    
    <ImageView
        android:id="@+id/tweet_overlay_item_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/layout_content_desc_profile_image"
        android:src="@drawable/twitter_profile_image_blank" />

    <TextView
        android:id="@+id/tweet_overlay_item_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tweet_overlay_item_profile_image"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/layout_content_desc_username"
        android:textSize="16dip" />

    <TextView
        android:id="@+id/tweet_overlay_item_tweet_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_overlay_item_username_text"
        android:layout_toRightOf="@+id/tweet_overlay_item_profile_image"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/layout_content_desc_user_tweet" 
        android:textSize="12dip" />
    
</com.cmpe277.android.tweeter.views.TweetPopupOverlay>