
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="83dp"
            android:layout_marginTop="28dp"
            android:text="@string/twitter_login_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_text"
            android:layout_marginTop="57dp"
            android:text="@string/username_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/username_text"
            android:layout_alignBottom="@+id/username_text"
            android:layout_toRightOf="@+id/username_text"
            android:ems="10"
            android:hint="@string/username_hint_text"
            android:inputType="text" />

    </RelativeLayout>
